--- a/Movies/app/src/main/res/layout/activity_main.xml
+++ b/Movies/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
         android:text="Find the movie" />
 
     <android.support.v7.widget.RecyclerView
+        android:layout_marginTop="20dp"
         android:id="@+id/rv_movie_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
