--- a/Movies/app/src/main/res/layout/recycler_view_item.xml
+++ b/Movies/app/src/main/res/layout/recycler_view_item.xml
@@ -5,8 +5,11 @@
 
     <TextView
         android:id="@+id/tv_movie_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/movie_row_border"
+        android:gravity="center"
+        android:padding="20dp"
         android:textAppearance="?android:textAppearanceLarge"
         android:textSize="22sp" />
 
