--- a/Movies/app/src/main/res/layout/recycler_view_item.xml
+++ b/Movies/app/src/main/res/layout/recycler_view_item.xml
@@ -1,16 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_movie_title"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/movie_row_border"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:padding="20dp"
-        android:textAppearance="?android:textAppearanceLarge"
-        android:textSize="22sp" />
+        android:background="@drawable/movie_row_border">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/tv_movie_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="5dp"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:textSize="22sp" />
+
+        <TextView
+            android:id="@+id/tv_release_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@id/tv_movie_title"
+            android:layout_toRightOf="@id/tv_movie_title" />
+    </RelativeLayout>
+
+</RelativeLayout>
