--- a/Movies/app/src/main/res/layout/recycler_view_item.xml
+++ b/Movies/app/src/main/res/layout/recycler_view_item.xml
@@ -6,26 +6,25 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:background="@drawable/movie_row_border">
+        android:background="@drawable/movie_row_border"
+        >
 
         <TextView
             android:id="@+id/tv_movie_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="5dp"
+            android:maxLines="2"
             android:textAppearance="?android:textAppearanceLarge"
+            android:layout_centerHorizontal="true"
             android:textSize="22sp" />
 
         <TextView
             android:id="@+id/tv_release_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/tv_movie_title"
-            android:layout_toRightOf="@id/tv_movie_title" />
+            android:layout_alignParentBottom="true"
+            android:layout_below="@id/tv_movie_title"
+            android:layout_centerHorizontal="true" />
     </RelativeLayout>
 
 </RelativeLayout>
