--- a/Movies/app/src/main/res/layout/movie_detail_activity.xml
+++ b/Movies/app/src/main/res/layout/movie_detail_activity.xml
@@ -8,4 +8,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <ImageView
+        android:layout_below="@id/tv_movie_detail_title"
+        android:id="@+id/iv_movie_detail_thumb"
+        android:layout_width="300dp"
+        android:layout_height="300dp" />
 </RelativeLayout>
