--- a/IndianRail/app/src/main/res/layout/activity_main.xml
+++ b/IndianRail/app/src/main/res/layout/activity_main.xml
@@ -44,4 +44,9 @@
         android:layout_height="wrap_content"
         android:visibility="invisible" />
 
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </RelativeLayout>
