--- a/IndianRail/app/src/main/res/layout/activity_main.xml
+++ b/IndianRail/app/src/main/res/layout/activity_main.xml
@@ -13,5 +13,10 @@
         android:layout_height="wrap_content"
         android:onClick="trainRouteListClicked"
         />
-
+    <Button
+        android:text="Train Between Station"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="trainBetweenStationButtonClicked"
+        />
 </LinearLayout>
