--- a/IndianRail/app/src/main/res/layout/activity_train_route_list.xml
+++ b/IndianRail/app/src/main/res/layout/activity_train_route_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,7 +24,8 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="25dp"
-            android:layout_toRightOf="@id/tv_train_number_label" />
+            android:layout_toRightOf="@id/tv_train_number_label"
+            android:maxLines="1" />
 
         <Button
             android:id="@+id/btn_search"
@@ -33,9 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/et_train_number"
-            android:text="@string/search"
             android:onClick="searchButtonClicked"
-            />
+            android:text="@string/search" />
 
     </LinearLayout>
 
@@ -43,6 +42,6 @@
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
