1. Start Screen Layout added 2. Class for feeding Spinner data added

--- a/QuizApp/app/src/main/res/values/styles.xml
+++ b/QuizApp/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <style name="MyButton" parent="Theme.AppCompat.Light">
+        <item name="colorControlHighlight">@color/start_button_active</item>
+        <item name="colorButtonNormal">@color/start_button_normal</item>
+    </style>
+
 </resources>
