--- a/QuizApp/app/src/main/res/drawable/answer_button_background.xml
+++ b/QuizApp/app/src/main/res/drawable/answer_button_background.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#D0D3D4" />
     <stroke
         android:width="3dp"
         android:color="#B1BCBE" />
-    <corners android:radius="10dp" />
+    <corners android:radius="8dp" />
 </shape>
