navigation bars drawables added

--- a/Instagramclone/app/src/main/res/layout/layout_bottom_navigation.xml
+++ b/Instagramclone/app/src/main/res/layout/layout_bottom_navigation.xml
@@ -4,7 +4,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimary">
+        android:background="@drawable/white_grey_border_bottom">
 
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/bottom_nav_view_bar"
