--- a/Instagramclone/app/src/main/res/layout/layout_top_tabs.xml
+++ b/Instagramclone/app/src/main/res/layout/layout_top_tabs.xml
@@ -12,7 +12,9 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@drawable/white_grey_border_top"
+                >
 
             </android.support.v7.widget.Toolbar>
 
