--- a/Instagramclone/app/src/main/res/layout/activity_share.xml
+++ b/Instagramclone/app/src/main/res/layout/activity_share.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="example.banty.com.instagramclone.activities.ShareActivity">
+    tools:context="example.banty.com.instagramclone.activities.share.ShareActivity">
 
 </android.support.constraint.ConstraintLayout>
