--- a/Instagramclone/app/src/main/res/layout/layout_top_tabs.xml
+++ b/Instagramclone/app/src/main/res/layout/layout_top_tabs.xml
@@ -9,14 +9,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <android.support.v7.widget.Toolbar
+            <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/white_grey_border_top"
                 >
 
-            </android.support.v7.widget.Toolbar>
+            </android.support.design.widget.TabLayout>
 
         </android.support.design.widget.AppBarLayout>
 
