--- a/Instagramclone/app/src/main/res/layout/activity_profile.xml
+++ b/Instagramclone/app/src/main/res/layout/activity_profile.xml
@@ -8,9 +8,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include layout="@layout/snippet_top_profile_bar"/>
+        <include layout="@layout/layout_center_profile" />
 
-        <include layout="@layout/layout_bottom_navigation"/>
+        <include layout="@layout/layout_bottom_navigation" />
+
+        <ProgressBar
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="100dp"
+            android:visibility="gone" />
     </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
