--- a/Instagramclone/app/src/main/res/values/colors.xml
+++ b/Instagramclone/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="grey">#BFBFBF</color>
     <color name="white">#FFF</color>
     <color name="black">#000</color>
+    <color name="link">#003569</color>
 </resources>
