--- a/Instagramclone/app/src/main/res/layout/snippet_row_account_setting_toolbar.xml
+++ b/Instagramclone/app/src/main/res/layout/snippet_row_account_setting_toolbar.xml
@@ -14,24 +14,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <ImageView
+                    android:id="@+id/iv_back_arrow"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_back_arrow"
+                    android:layout_marginEnd="20dp" />
+
+
+
                 <TextView
+                    android:layout_toRightOf="@id/iv_back_arrow"
                     android:id="@+id/profile_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginStart="15dp"
-                    android:text="kumarbanty"
+                    android:layout_marginStart="5dp"
+                    android:text="Options"
                     android:textColor="@color/black"
                     android:textSize="20sp" />
 
-                <ImageView
-                    android:id="@+id/iv_profile_menu"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_profile_menu"
-                    android:layout_marginEnd="20dp" />
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
 
