--- a/Instagramclone/app/src/main/res/layout/activity_account_setting.xml
+++ b/Instagramclone/app/src/main/res/layout/activity_account_setting.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/layout_center_viewpager"/>
     <RelativeLayout
         android:id="@+id/rel_layout_1"
         android:layout_width="match_parent"
