--- a/Instagramclone/app/src/main/res/layout/activity_search.xml
+++ b/Instagramclone/app/src/main/res/layout/activity_search.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context="example.banty.com.instagramclone.activities.search.SearchActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include layout="@layout/layout_bottom_navigation"/>
+    </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
