--- a/Instagramclone/app/src/main/res/layout/activity_login.xml
+++ b/Instagramclone/app/src/main/res/layout/activity_login.xml
@@ -77,6 +77,7 @@
         android:layout_centerInParent="true" />
 
     <TextView
+        android:id="@+id/please_wait_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/login_loading_progress_bar"
