--- a/Instagramclone/app/src/main/res/layout/activity_register.xml
+++ b/Instagramclone/app/src/main/res/layout/activity_register.xml
@@ -73,6 +73,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/white_rounded_button"
             android:padding="12dp"
+            android:layout_marginTop="20dp"
             android:text="Register" />
 
     </LinearLayout>
@@ -84,6 +85,7 @@
         android:layout_centerInParent="true" />
 
     <TextView
+        android:id="@+id/please_wait_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/register_loading_progress_bar"
