--- a/Instagramclone/app/src/main/res/layout/activity_profile.xml
+++ b/Instagramclone/app/src/main/res/layout/activity_profile.xml
@@ -8,17 +8,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include layout="@layout/layout_center_profile" />
-
-        <include layout="@layout/layout_bottom_navigation" />
-
-        <ProgressBar
-            android:id="@+id/profile_progress_bar"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="100dp"
-            android:visibility="visible" />
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
     </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
