--- a/Instagramclone/app/src/main/res/layout/fragment_profile.xml
+++ b/Instagramclone/app/src/main/res/layout/fragment_profile.xml
@@ -1,24 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <RelativeLayout
+        android:id="@+id/rel_layout_1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
+
+        <include layout="@layout/snippet_top_profile_bar" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rel_layout_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/rel_layout_1">
 
         <include layout="@layout/layout_center_profile" />
 
-        <include layout="@layout/layout_bottom_navigation" />
-
-        <ProgressBar
-            android:id="@+id/profile_progress_bar"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="100dp"
-            android:visibility="visible" />
     </RelativeLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+    <ProgressBar
+        android:id="@+id/profile_progress_bar"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:visibility="gone" />
+
+    <include layout="@layout/layout_bottom_navigation" />
+
+</RelativeLayout>
