--- a/Instagramclone/app/src/main/res/layout/layout_center_profile.xml
+++ b/Instagramclone/app/src/main/res/layout/layout_center_profile.xml
@@ -67,7 +67,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/profile_discription"
+                    android:id="@+id/profile_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
