1. Username bug in profile fragment fixed 2. Progress bar fixed

--- a/Instagramclone/app/src/main/res/layout/fragment_profile.xml
+++ b/Instagramclone/app/src/main/res/layout/fragment_profile.xml
@@ -28,7 +28,7 @@
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
     <include layout="@layout/layout_bottom_navigation" />
 
