1. Gallary fragment and Photo fragment layout and java classes added. 2. view pager setup for fragments in Share Activity

--- a/Instagramclone/app/src/main/res/layout/activity_share.xml
+++ b/Instagramclone/app/src/main/res/layout/activity_share.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="example.banty.com.instagramclone.activities.share.ShareActivity">
-
+    
     <RelativeLayout
+        android:id="@+id/rel_layout_1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="50dp">
 
-        <include layout="@layout/layout_bottom_navigation"/>
+        <include layout="@layout/layout_center_viewpager"/>
+
     </RelativeLayout>
 
-</android.support.constraint.ConstraintLayout>
+    <RelativeLayout
+        android:id="@+id/rel_layout_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <include layout="@layout/layout_bottom_tabs"/>
+    </RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
