--- a/Instagramclone/app/src/main/res/layout/fragment_galary.xml
+++ b/Instagramclone/app/src/main/res/layout/fragment_galary.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <!--gallary toolbar-->
+        <include layout="@layout/snippet_top_gallary_toolbar"/>
     </RelativeLayout>
 
     <LinearLayout
