--- a/Instagramclone/app/src/main/res/layout/fragment_galary.xml
+++ b/Instagramclone/app/src/main/res/layout/fragment_galary.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_below="@id/rel_layout_1"
         android:weightSum="100">
 
         <RelativeLayout
@@ -26,6 +27,7 @@
             <ImageView
                 android:id="@+id/gallary_image_view"
                 android:layout_width="match_parent"
+                android:scaleType="fitCenter"
                 android:layout_height="match_parent" />
 
             <ProgressBar
