--- a/MyGallary/app/src/main/res/values/colors.xml
+++ b/MyGallary/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="grey">#BFBFBF</color>
+    <color name="white">#FFF</color>
+    <color name="black">#000</color>
+    <color name="link">#003569</color>
 </resources>
