Directory spinner will only display directory names

--- a/Instagramclone/app/src/main/res/layout/snippet_top_gallary_toolbar.xml
+++ b/Instagramclone/app/src/main/res/layout/snippet_top_gallary_toolbar.xml
@@ -26,7 +26,7 @@
                     android:id="@+id/spinner_directory"
                     android:layout_toRightOf="@id/iv_close_share"
                     android:layout_centerVertical="true"
-                    android:layout_width="wrap_content"
+                    android:layout_width="250dp"
                     android:textSize="20sp"
                     android:textColor="@color/black"
                     android:text="Gallary"
